--- a/archives.html
+++ b/archives.html
@@ -20,11 +20,11 @@
 
 <dl>
     <dt>Tue 07 February 2023</dt>
-    <dd><a href="https://abrarhs.github.io/my-third-article.html">My Third Article</a></dd>
+    <dd><a href="https://abrarhs.github.io/quote-3.html">Quote 3</a></dd>
     <dt>Mon 06 February 2023</dt>
-    <dd><a href="https://abrarhs.github.io/my-second-article.html">My Second Article</a></dd>
+    <dd><a href="https://abrarhs.github.io/quote-2.html">Quote 2</a></dd>
     <dt>Sun 05 February 2023</dt>
-    <dd><a href="https://abrarhs.github.io/quote.html">Quote</a></dd>
+    <dd><a href="https://abrarhs.github.io/quote-1.html">Quote 1</a></dd>
 </dl>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
