Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -14,7 +14,7 @@
                 <h1><a href="https://abrarhs.github.io/">Quote of The Day</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://abrarhs.github.io/category/blog.html">Blog</a></li>
+            <li><a href="https://abrarhs.github.io/category/quotes.html">Quotes</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Authors on Quote of The Day</h1>
     <ul>
