--- a/categories.html
+++ b/categories.html
@@ -14,11 +14,11 @@
                 <h1><a href="https://abrarhs.github.io/">Quote of The Day</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="https://abrarhs.github.io/category/blog.html">Blog</a></li>
+            <li><a href="https://abrarhs.github.io/category/quotes.html">Quotes</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Categories on Quote of The Day</h1>
     <ul>
-        <li><a href="https://abrarhs.github.io/category/blog.html">Blog</a> (3)</li>
+        <li><a href="https://abrarhs.github.io/category/quotes.html">Quotes</a> (3)</li>
     </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
